@@ -122,3 +122,8 @@ CREATE TABLE binaries (
   data blob(50000),
   PRIMARY KEY  (id)
 );
+
+CREATE TABLE computers (
+  id int generated by default as identity (start with +10000),
+  developer int NOT NULL
+);
