@@ -1,5 +1,7 @@
 *SVN*
 
+* Fixed that foreign keys named the same as the association would cause stack overflow #437 [Eric Anderson]
+
 * Fixed default scope of acts_as_list from "1" to "1 = 1", so it'll work in PostgreSQL (among other places) #427 [Alexey]
 
 * Added Base#reload that reloads the attributes of an object from the database #422 [Andreas Schwarz]
